some home page done

--- a/bountiful-foods/about-us.html
+++ b/bountiful-foods/about-us.html
@@ -64,10 +64,15 @@
             <p>Edisson J. Ruiz</p>
             <p>wdd230 - BYU Idaho</p>
         </div>
+        <div>
+            <p>Credits:</p>
+            <a href="/bountiful-foods/credits.html">Thank You!</a>
+        </div>
         <div>            
             <p class="lastModif" id="lastModified"></p>
         </div>        
     </footer>
 <script src="scripts/bountiful-foods.js"></script>
+<script src="scripts/weather.js"></script>
 </body>
 </html>
