--- a/bountiful-foods/credits.html
+++ b/bountiful-foods/credits.html
@@ -49,13 +49,15 @@
         </div>
     </header>
     <main>
-        <div>
+        <div id="credits-page">
             <h2>Icons:</h2>
             <a href="https://icons8.com/" target="_blank">https://icons8.com/</a>
             <h2>Pfeiffer Beach Image:</h2>
             <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/">Telegraph</a>
             <br>
             <a href="https://www.gettyimages.com/">getty</a>
+            <h2>Paragraph South Coast</h2>
+            <a href="https://scc.ca.gov/projects/south-coast/">Coastal Conservancy State of California</a>
         </div>
     </main>
     <footer>
@@ -76,5 +78,6 @@
         </div>        
     </footer>
 <script src="scripts/bountiful-foods.js"></script>
+<script src="scripts/weather.js"></script>
 </body>
 </html>
