fresh page started

--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -88,17 +88,17 @@
                     <div class="day">
                         <h3 id="day1">day1</h3>
                         <p><span id="grades-day1"></span>&deg;F <span id="condition-day1"></span></p>
-                        <img src="images/humidity.png" alt="Icon Humidity" width="20px">
+                        <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     <div class="day">
                         <h3 id="day2">day2</h3>
                         <p><span id="grades-day2"></span>&deg;F <span id="condition-day2"></span></p>
-                        <img src="images/humidity.png" alt="Icon Humidity" width="20px">
+                        <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     <div class="day">
                         <h3 id="day3">day3</h3>
                         <p><span id="grades-day3"></span>&deg;F <span id="condition-day3"></span></p>
-                        <img src="images/humidity.png" alt="Icon Humidity" width="20px">
+                        <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     
                 </div>
