--- a/bountiful-foods/credits.html
+++ b/bountiful-foods/credits.html
@@ -73,6 +73,10 @@
             <p>Edisson J. Ruiz</p>
             <p>wdd230 - BYU Idaho</p>
         </div>
+        <div>
+            <p>Credits:</p>
+            <a id="credits" href="/bountiful-foods/credits.html">Thank You!</a>
+        </div>
         <div>            
             <p class="lastModif" id="lastModified"></p>
         </div>        
