--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -49,7 +49,24 @@
         </div>
     </header>
     <main>
-
+        <div id="all-fresh">
+            <div id="from-box">
+                <h1 id="freshTitle">Build Your Special Drink</h1>
+                <form action="#">
+                    <fieldset>
+                        <legend>Your Information</legend>
+                        <label class="labelf"><img src="images/name.png" alt="name"> First name*: <input type="text" name="fname" required></label>
+                        <label class="labelf"><img src="images/email.png" alt="email"> Email: <input type="email" name="email"></label>
+                        <label class="labelf"><img src="images/phone.png" alt="phone"> Phone number*: <input type="tel" name="phone" required></label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Your Drink</legend>
+                        <label class="labelf"></label>
+                        <label class="labelf">Aditional Instruction: <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea></label>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
@@ -66,7 +83,7 @@
         </div>
         <div>
             <p>Credits:</p>
-            <a href="/bountiful-foods/credits.html">Thank You!</a>
+            <a id="credits" href="/bountiful-foods/credits.html">Thank You!</a>
         </div>
         <div>            
             <p class="lastModif" id="lastModified"></p>
