--- a/bountiful-foods/about-us.html
+++ b/bountiful-foods/about-us.html
@@ -66,7 +66,7 @@
         </div>
         <div>
             <p>Credits:</p>
-            <a href="/bountiful-foods/credits.html">Thank You!</a>
+            <a id="credits" href="/bountiful-foods/credits.html">Thank You!</a>
         </div>
         <div>            
             <p class="lastModif" id="lastModified"></p>
