About us page started

--- a/bountiful-foods/about-us.html
+++ b/bountiful-foods/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
+    <meta name="Description" content="Final Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -49,7 +49,44 @@
         </div>
     </header>
     <main>
-
+        <div id="main-about">
+            <section id="history">
+                <h2 class="title">Our History</h2>
+                <p>Bountiful Foods started ten years ago in Carlsbad, California, with the initiative of its owner to consume and sell fresh and organic fruits, we are a small company growing, and today we distribute fruit drinks and bags from all the coast in our trucks, directly from our farms. </p>
+                <br>
+                <p>Our mission is to provide fresh and healthy food options, including organic, made-to-order, fruit drinks and fruit bags, to the local population and to tourists visiting the coastal areas.</p>
+            </section>
+            <section class="from-box" id="from-about">
+                <h2 class="titleForm">Contact Us</h2>
+                <form action="#">
+                    <fieldset>
+                        <legend>Your Information</legend>
+                        <label class="labelf"><img src="images/name.png" alt="name"> First name*: <input type="text" name="fname" required></label>
+                        <label class="labelf"><img src="images/email.png" alt="email"> Email: <input type="email" name="email"></label>
+                        <label class="labelf"><img src="images/phone.png" alt="phone"> Phone number*: <input type="tel" name="phone" required></label>
+                        <label class="labelf">Your Message: <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea></label>
+                    </fieldset>
+                </form>
+            </section>
+            <section id="info">
+                <h2 class="title">Information</h2>
+                <h3>Address</h3>
+                <p>5200 El Camino Real<br>Carlsbad, CA 92010</p>
+                <h3>Working Hours</h3>
+                <p>Monday - Saturday <br> 8:00 a.m. to 7:00 p.m.</p>
+                <h3>Phone</h3>
+                <p>(760) 123-4567</p>
+                <h3>Email</h3>
+                <p>bountiful-foods@gmail.com</p>
+                <h2>President & CEO</h2>
+                <p>Edisson J. Ruiz</p>
+                <p>Phone: 3852338356 <br> Email: edisson.ruiz21@gmail.com</p>
+            </section>
+            <section id="map">
+                <h2 class="title">Map</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d75604.20705507701!2d-117.27242566515922!3d33.12838966943866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc73453f3bee59%3A0xa4cb5592fcf65d2f!2sCarlsbad%2C%20California!5e0!3m2!1ses!2sus!4v1689568871155!5m2!1ses!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+        </div>
     </main>
     <footer>
         <div>
