--- a/bountiful-foods/credits.html
+++ b/bountiful-foods/credits.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
+    <meta name="Description" content="Final Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -53,11 +53,15 @@
             <h2>Icons:</h2>
             <a href="https://icons8.com/" target="_blank">https://icons8.com/</a>
             <h2>Pfeiffer Beach Image:</h2>
-            <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/">Telegraph</a>
+            <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/" target="_blank">Telegraph</a>
             <br>
-            <a href="https://www.gettyimages.com/">getty</a>
+            <a href="https://www.gettyimages.com/" target="_blank">getty</a>
             <h2>Paragraph South Coast</h2>
-            <a href="https://scc.ca.gov/projects/south-coast/">Coastal Conservancy State of California</a>
+            <a href="https://scc.ca.gov/projects/south-coast/" target="_blank">Coastal Conservancy State of California</a>
+            <h2>Images</h2>
+            <a href="https://www.pexels.com/" target="_blank">Pexels</a>
+            <br>
+            <a href="https://unsplash.com/" target="_blank">Unsplash</a>
         </div>
     </main>
     <footer>
