--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
+    <meta name="Description" content="Final Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -50,8 +50,8 @@
     </header>
     <main>
         <div id="all-fresh">
-            <div id="from-box">
-                <h1 id="freshTitle">Build Your Special Drink</h1>
+            <div class="from-box">
+                <h1 class="titleForm">Build Your Special Drink</h1>
                 <form action="#">
                     <fieldset>
                         <legend>Your Information</legend>
