--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
+    <meta name="Description" content="Final Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
