drinks images added and buttons

--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -56,7 +56,7 @@
                 <picture>
                     <img id="beach" src="images/pfeiffer-beach.png" alt="Pfeiffer Beach">
                 </picture>
-                <h4 id="beach-text">Pfeiffer Beach: see the stunning rock formations where Sycamore Canyon Creek empties into the Pacific</h4>
+                <h4 class="img-text">Pfeiffer Beach: see the stunning rock formations where Sycamore Canyon Creek empties into the Pacific</h4>
             </div>
             <div id="south">
                 <h2>California South Coast</h2>
@@ -73,7 +73,7 @@
                     <br>
                     <div class="weat">
                         <figure>
-                            <img src="#" alt="#" id="weather-icon" />
+                            <img src="#" alt="#" id="weather-icon">
                             <figcaption></figcaption>
                         </figure> 
                         <h2 id="condition">#</h2>
@@ -88,16 +88,28 @@
                     <div class="day">
                         <h3 id="day1">day1</h3>
                         <p><span id="grades-day1"></span>&deg;F <span id="condition-day1"></span></p>
+                        <figure>
+                            <img src="#" alt="#" id="weather-icon1">
+                            <figcaption></figcaption>
+                        </figure> 
                         <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     <div class="day">
                         <h3 id="day2">day2</h3>
                         <p><span id="grades-day2"></span>&deg;F <span id="condition-day2"></span></p>
+                        <figure>
+                            <img src="#" alt="#" id="weather-icon2">
+                            <figcaption></figcaption>
+                        </figure> 
                         <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     <div class="day">
                         <h3 id="day3">day3</h3>
                         <p><span id="grades-day3"></span>&deg;F <span id="condition-day3"></span></p>
+                        <figure>
+                            <img src="#" alt="#" id="weather-icon3">
+                            <figcaption></figcaption>
+                        </figure> 
                         <img src="images/humidity.png" alt="Icon Humidity" width="20">
                     </div>
                     
@@ -106,6 +118,24 @@
                     <h4>Weather data powered by <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap</a></h4>
                 </div> 
             </section>
+            <section class="box-drinks">
+                <h1 class="title">Enjoy Fresh Fruit Drink!</h1>
+                <a href="https://yuriro21.github.io/wdd230/bountiful-foods/fresh.html"><img id="button-drink" src="images/button1.png" alt="button to Fresh Page"></a>
+                <h3 class="title">You was taste <span id="num-drinks">0</span> drinks</h3>
+                <div id="user-drinks"></div>
+            </section>
+            <div class="box-drinks">
+                <picture>
+                    <img class="drinks" src="images/drink1.jpg" alt="Fruit Drink">                    
+                </picture>
+                <h4 class="img-text">Blueberry Drink</h4>
+            </div>
+            <div class="box-drinks">
+                <picture>
+                    <img class="drinks" src="images/drink2.jpg" alt="Fruit Drink">                    
+                </picture>
+                <h4 class="img-text">Watermelon Drink</h4>
+            </div>
         </div>
     </main>
 
