--- a/bountiful-foods/credits.html
+++ b/bountiful-foods/credits.html
@@ -52,16 +52,18 @@
         <div id="credits-page">
             <h2>Icons:</h2>
             <a href="https://icons8.com/" target="_blank">https://icons8.com/</a>
-            <h2>Pfeiffer Beach Image:</h2>
-            <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/" target="_blank">Telegraph</a>
-            <br>
-            <a href="https://www.gettyimages.com/" target="_blank">getty</a>
-            <h2>Paragraph South Coast</h2>
-            <a href="https://scc.ca.gov/projects/south-coast/" target="_blank">Coastal Conservancy State of California</a>
             <h2>Images</h2>
             <a href="https://www.pexels.com/" target="_blank">Pexels</a>
             <br>
             <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+            <h2>Logos</h2>
+            <a href="https://www.canva.com/">Canva</a>
+            <h2>Paragraph South Coast</h2>
+            <a href="https://scc.ca.gov/projects/south-coast/" target="_blank">Coastal Conservancy State of California</a>
+            <h2>Pfeiffer Beach Image:</h2>
+            <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/" target="_blank">Telegraph</a>
+            <br>
+            <a href="https://www.gettyimages.com/" target="_blank">getty</a>            
         </div>
     </main>
     <footer>
