--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -64,6 +64,7 @@
                         <label class="labelf"></label>
                         <label class="labelf">Aditional Instruction: <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea></label>
                     </fieldset>
+                    <input type="submit" value="Make My Drink" class="submitBtn">
                 </form>
             </div>
         </div>
