--- a/bountiful-foods/about-us.html
+++ b/bountiful-foods/about-us.html
@@ -66,6 +66,7 @@
                         <label class="labelf"><img src="images/phone.png" alt="phone"> Phone number*: <input type="tel" name="phone" required></label>
                         <label class="labelf">Your Message: <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea></label>
                     </fieldset>
+                    <input type="submit" value="Sent" class="submitBtn">
                 </form>
             </section>
             <section id="info">
