--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Final Assignment Bountiful Foods page for Edisson J. Ruiz in WDD 230: Web Frontend Development at Brigham Young University - Idaho, july 2023">
     <title>Bountiful Foods</title>
+    <link rel="shortcut icon" href="images/favicon1.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
