--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -62,7 +62,9 @@
                     <fieldset>
                         <legend>Your Drink</legend>
                         <label class="labelf"></label>
-                        <label class="labelf">Aditional Instruction: <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea></label>
+                        <div>Choose up to 3 fruits:</div>
+                        <label id="listFruits"></label>
+                        <label class="labelf">Aditional Instruction: <textarea name="text-area" id="text-area" placeholder=" (optional)" cols="35" rows="5"></textarea></label>
                     </fieldset>
                     <input type="submit" value="Make My Drink" class="submitBtn">
                 </form>
