--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -122,7 +122,7 @@
             <section class="box-drinks">
                 <h1 class="title">Enjoy Fresh Fruit Drink!</h1>
                 <a href="https://yuriro21.github.io/wdd230/bountiful-foods/fresh.html"><img id="button-drink" src="images/button1.png" alt="button to Fresh Page"></a>
-                <h3 class="title">You was taste <span id="num-drinks">0</span> drinks</h3>
+                <h3 class="title">You was taste <span id="num-drinks"></span> drinks</h3>
                 <div id="user-drinks"></div>
             </section>
             <div class="box-drinks">
