--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -61,9 +61,9 @@
                     </fieldset>
                     <fieldset>
                         <legend>Your Drink</legend>
-                        <div>Choose up to 3 fruits:</div>
-                        <!-- <div id="list-fruits" class="list-fruits"></div> -->
-                        <label><select name="fruit1" id="fruit1"></select></label>
+                        <label><select name="fruit1" id="fruit1" class="fresh-label"></select></label>
+                        <label><select name="fruit2" id="fruit2" class="fresh-label"></select></label>
+                        <label><select name="fruit3" id="fruit3" class="fresh-label"></select></label>
                         <label class="labelf">Aditional Instruction: <textarea name="text-area" id="text-area" placeholder=" (optional)" cols="35" rows="5"></textarea></label>
                     </fieldset>
                     <input type="submit" value="Make My Drink" class="submitBtn">
