Final Page finished

--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -55,9 +55,9 @@
                 <form id="fresh-form" action="#">
                     <fieldset>
                         <legend>Your Information</legend>
-                        <label class="labelf"><img src="images/name.png" alt="name"> First name*: <input type="text" name="fname" required></label>
-                        <label class="labelf"><img src="images/email.png" alt="email"> Email: <input type="email" name="email"></label>
-                        <label class="labelf"><img src="images/phone.png" alt="phone"> Phone number*: <input type="tel" name="phone" required></label>
+                        <label class="labelf"><img src="images/name.png" alt="name"> First name*: <input type="text" name="fname" id="name" required></label>
+                        <label class="labelf"><img src="images/email.png" alt="email"> Email: <input type="email" name="email" id="email"></label>
+                        <label class="labelf"><img src="images/phone.png" alt="phone"> Phone number*: <input type="tel" name="phone" id="phone" required></label>
                     </fieldset>
                     <fieldset>
                         <legend>Your Drink</legend>
